kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: develop
  labels:
    engine: fargate
spec:
  selector:
    matchLabels:
      app: api
      engine: fargate
  template:
    metadata:
      labels:
        app: api
        engine: fargate
    spec:
      containers:
        - name: api
          image: 6****2.dkr.ecr.ap-northeast-2.amazonaws.com/api:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            exec:
              command:
                - /app/healthz
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "0.5Gi"
              cpu: "0.25"
            limits:
              memory: "0.5Gi"
              cpu: "1"
      imagePullSecrets:
        - name: ecr
