kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: develop
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: api
      port: 8080
