kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api
  namespace: develop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
spec:
  rules:
    - host: api.youha.com
      http:
        paths:
          - path: /
            backend:
              serviceName: api
              servicePort: 8080
